<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_stop_lock"
        android:icon="@drawable/ic_stop_white_24dp"
        android:title="@string/relay_stop_lock"
        app:showAsAction="always" />
    <item android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/relay_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_panic"
        android:title="@string/relay_panic"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reconnect"
        android:title="@string/relay_reconnect"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_pause_sending"
        android:title="@string/relay_pause_sending"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_apply_recent"
        android:title="@string/relay_apply_recent"
        app:showAsAction="never" />
</menu>
